# sharingan

./: .gitignore  README.md  claude-dev-guide.md  pyproject.toml
examples/: basic_usage.py
src/sharingan/: __init__.py  __main__.py
src/sharingan/attention/: __init__.py  claude-attention.md  downsampler.py  extractor.py  metrics.py
src/sharingan/cli/: __init__.py  claude-cli.md  main.py
src/sharingan/core/: __init__.py  analyzer.py  claude-core.md  config.py  result.py
src/sharingan/models/: __init__.py  base.py  claude-models.md  qwen.py  registry.py
src/sharingan/ui/: __init__.py  claude-ui.md  dashboard.py
src/sharingan/visualization/: __init__.py  claude-visualization.md  heatmap.py  html_export.py  interactive.py
tests/: __init__.py  test_downsampler.py  test_gqa.py  test_metrics.py  test_result.py
