[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sharingan"
version = "0.1.0"
description = "Attention visualization for transformers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Sharingan Contributors"}
]
keywords = ["attention", "transformers", "visualization", "nlp", "deep-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "torch>=2.0",
    "transformers>=4.37.0",
    "matplotlib>=3.7",
    "plotly>=5.18",
    "numpy>=1.24",
    "scipy>=1.10",
    "gradio>=4.0",
    "typer>=0.9",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
sharingan = "sharingan.cli.main:app"

[project.urls]
Homepage = "https://github.com/sharingan-viz/sharingan"
Documentation = "https://github.com/sharingan-viz/sharingan#readme"
Repository = "https://github.com/sharingan-viz/sharingan"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sharingan = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
